# SDL3-Hub

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/phy/: collision.h  polygonrb.h  quadtree.h
physics/: CMakeLists.txt  bouncingBall.cpp
small/: 1_template.cpp  CMakeLists.txt  SAT.cpp  archimedes.cpp  ballPhysics.cpp  eightball.cpp  integrationScheme.cpp  mode7.cpp  polygonCollision.cpp  pong2d.cpp  quadtree.cpp  raycasting.cpp  rigidBody1.cpp  rigidBody2.cpp  rigidPhysics.cpp  sierpienskiTriangle.cpp  softBodies.cpp  tetris.cpp  tictactoe.cpp  transformation.cpp  verlet.cpp
small/include/phy/: geometry.h  linerb.h  quadtree.h  vec2.h
test/: CMakeLists.txt  window_test.cpp
